--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         /* Arrow animation styles for video overlay */
         .video-overlay-content .arrow-container {
             position: absolute;
-            top: 50%; /* Center vertically within the overlay */
+            top: 50%; /* Center verticarlay */
             left: 70%; /* Center horizontally within the overlay */
             transform: translate(-50%, -50%); /* Adjust for its own size */
             width: 100px; /* A fixed width for the container to define the central area */
@@ -1047,7 +1047,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                     </button>
                 </div>
                 <!-- Curved Scroller (Grok section) -->
-                <div class="md:w-1/2 flex text-center justify-center items-center">
+                <div class="md:w-1/2 flex justify-center items-center">
                     <div class="scroller">
                         <svg class="scroller__bar bar" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                             <path class="bar__thumb" fill="none" stroke-linecap="round" />
