--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                     </button>
                 </div>
                 <!-- Curved Scroller (Grok section) -->
-                <div class="md:w-1/2 text-start justify-center items-center overflow-hidden">
+                <div class="md:w-1/2 justify-center items-center overflow-hidden">
                     <div class="scroller">
                         <svg class="scroller__bar bar" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                             <path class="bar__thumb" fill="none" stroke-linecap="round" />
@@ -1055,7 +1055,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div>
+                                <div class="md:w-1/2 flex justify-center items-center">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
