--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div class="md:w-1/2 flex justify-center items-center">
+                                <div class="w-full text-left px-4">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
