--- a/index.html
+++ b/index.html
@@ -1055,11 +1055,11 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div class="w-full text-left px-4">
+                                <div class="w-full text-center px-4">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
-                                <img class="md:w-1/2 flex justify-center items-center"
+                                <img class="w-full flex justify-center items-center"
                   src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                             </header>
                             <main>
