--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                     </button>
                 </div>
                 <!-- Curved Scroller (Grok section) -->
-                <div class="md:w-1/2 flex justify-center items-center overflow-hidden">
+                <div class="md:w-1/2 flex justify-center items-center">
                     <div class="scroller">
                         <svg class="scroller__bar bar" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                             <path class="bar__thumb" fill="none" stroke-linecap="round" />
@@ -1055,12 +1055,11 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div class="w-full text-center px-4">
+                                <div class="md:w-1/2 flex justify-center items-center">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
-                                <img class="w-full flex justify-center items-center"
-                  src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
+                                <img src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                             </header>
                             <main>
                                 <p>
@@ -1129,8 +1128,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                 <p>Find out how to do things like this and more by subscribing.</p>
                             </main>
                             <footer>
-                                <p>The Craft of UI&nbsp;&copy;</p>
-                            </footer>
+                        <p>The Craft of UI&nbsp;&copy;</p>
+                        </footer>
                         </div>
                         <style id="scroller-frames"></style>
                     </div>
