--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             opacity: 0; /* Initially hidden */
             transition: opacity 0.3s ease-in-out;
             top: 50%; /* Center vertically within its container */
-            transform: translateY(-50%); /* Adjust for its own height */
+            transform: translateY(-50%);
         }
 
         /* Keyframes for arrow animation */
@@ -1062,6 +1062,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                 <img src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                             </header>
                             <main>
+                               <div class="md:w-1/2 flex justify-center items-center">
                                 <p>
                                     Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
                                     in voluptatum, ducimus labore iste consectetur laboriosam officiis
@@ -1126,6 +1127,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                     expedita optio?
                                 </p>
                                 <p>Find out how to do things like this and more by subscribing.</p>
+                               </div>
                             </main>
                             <footer>
                         <p>The Craft of UI&nbsp;&copy;</p>
