--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                 <img src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                             </header>
                             <main>
-                               <div class="text-center">
+                               <div class="text-left justify-start">
                                 <p>
                                     Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
                                     in voluptatum, ducimus labore iste consectetur laboriosam officiis
