--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div class="text-left justify-start">
+                                <div class="text-center justify-center">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
