--- a/index.html
+++ b/index.html
@@ -1059,8 +1059,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                         
-                                <img src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
-                                </div>
+                                <img class="justify-center"
+                                   src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                             </header>
                             <main>
                                <div class="text-left justify-start">
