--- a/index.html
+++ b/index.html
@@ -1058,12 +1058,10 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                 <div class="text-center justify-center">
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
-                        
-                                <img class="justify-center"
-                                   src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
-                            </header>
+                           </header>
                             <main>
                                <div class="text-left justify-start">
+                                <img src="https://picsum.photos/1280/720?random=12" alt="Random image" onerror="this.onerror=null;this.src='https://placehold.co/1280x720/000/FFF?text=Image+Placeholder';" />
                                 <p>
                                     Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
                                     in voluptatum, ducimus labore iste consectetur laboriosam officiis
