--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,9 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                                </div>
                             </main>
                             <footer>
+                        <div class="text-center justify-center">
                         <p>The Craft of UI&nbsp;&copy;</p>
+                        </div>
                         </footer>
                         </div>
                         <style id="scroller-frames"></style>
