--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                 </div>
                 <!-- Curved Scroller (Grok section) -->
             <div class="md:w-1/2 flex justify-center items-center">
-                    <div class="scroller">
+                    <div class="roller">
                         <svg class="scroller__bar bar" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                             <path class="bar__thumb" fill="none" stroke-linecap="round" />
                             <path class="bar__track" fill="none" stroke-linecap="round" />
