--- a/index.html
+++ b/index.html
@@ -949,8 +949,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 </div>
 </div>
 </section>
-
-<section id="section-5" class=".ai-widget relative min-h-[2200px] text-white overflow-hidden pt-32">
+<section id="section-4" class="relative min-h-[2200px] bg-[#0D0D0D] text-white overflow-hidden pt-32">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 space-y-32">
             <div class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-8">
                 [ PRODUCTS ]
@@ -972,7 +971,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                     </button>
                 </div>
                 <!-- Curved Scroller (Grok section) -->
-            <div class="md:w-1/2 flex justify-center items-center">
+                <div class="md:w-1/2 flex justify-center items-center">
                     <div class="scroller">
                         <svg class="scroller__bar bar" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                             <path class="bar__thumb" fill="none" stroke-linecap="round" />
@@ -1205,7 +1204,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 
         </div>
     </section>
-<script>
+
+    <script>
         // JS for the API section animation
         // Renamed IDs to be unique to avoid conflicts and ensure correct targeting
         let apiTypingDiv, apiThinkingDiv, apiFinalDiv, apiCountText, apiFinalContent, officesDisplayDiv;
@@ -1623,6 +1623,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             configureTimeline();
         }
     </script>
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
 const videoOverlayStates = [
