--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                         </svg>
                         <div>
                             <header>
-                                <div class="md:w-1/2 flex justify-center items-center"> 
+                                <div class="flex justify-center items-center"> 
                                     <h1>023: curved scroller.</h1>
                                     <p>Jhey Tompkins.</p>
                                 </div>
