--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@ window.addEventListener('resize', () => {
 
                     chatHistory.push({ role: "user", parts: [{ text: fullPrompt }] });
                     const payload = { contents: chatHistory };
-                    const apiKey = ""; // Canvas will automatically provide the API key at runtime
+                    const apiKey = "AIzaSyCCbjMYKZAENN4DXVfi2f7R0R0LJZhVvIs"; // Canvas will automatically provide the API key at runtime
                     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                     const response = await fetch(apiUrl, {
