--- a/index.html
+++ b/index.html
@@ -56,61 +56,6 @@ lg:pt-16">
 <div class="flex flex-col gap-3 sm:flex-row">
 </div></div></div></div></div></div>
 
-    <div id="video-card-container" class="fixed left-8 z-10 w-[300px] h-[300px]" style="top: 50%; transform: translateY(-50%);">
-        <div id="left-video-panel" class="relative bg-black rounded-xl shadow-lg w-full h-full overflow-hidden">
-            <video class="absolute inset-0 w-full h-full object-cover" autoplay loop muted playsinline>
-                <source src="holographicgradient.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-
-            <div id="video-overlay-0" class="video-overlay-content opacity-100 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
-                <h2 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
-                    Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
-                </h2>
-                <p class="text-gray-200 text-sm text-center">
-                    Huly offers a wide range of features to create and manage your collaborative tools and boost team efficiency.
-                </p>
-                <div class="mt-4 flex items-center justify-center space-x-2">
-                    <span class="inline-block bg-blue-400 text-blue-900 text-xs px-2 py-1 rounded-full">John S.</span>
-                    <span class="inline-block bg-purple-400 text-purple-900 text-xs px-2 py-1 rounded-full">Lilianna</span>
-                </div>
-            </div>
-
-            <div id="video-overlay-1" class="video-overlay-content opacity-0 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
-                <div class="relative w-full h-full flex flex-col justify-center items-center">
-                    <div class="arrow-container">
-                        <svg class="arrow-svg arrow-left" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M15 18l-6-6 6-6"></path>
-                        </svg>
-                        <svg class="arrow-svg arrow-right" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M9 18l6-6-6-6"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-xl font-semibold mb-4 text-white z-10">Team</h2>
-                    <p class="text-gray-200 text-sm text-center z-10">
-                        Enhance teamwork with powerful real-time collaboration features.
-                    </p>
-                    <div class="mt-4 flex items-center justify-center space-x-2 z-10">
-                        <span class="inline-block bg-blue-400 text-blue-900 text-xs px-2 py-1 rounded-full">John S.</span>
-                        <span class="inline-block bg-purple-400 text-purple-900 text-xs px-2 py-1 rounded-full">Lilianna</span>
-                    </div>
-                </div>
-            </div>
-
-            <div id="video-overlay-2" class="video-overlay-content opacity-0 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
-                <h2 class="text-xl font-semibold mb-4 text-white text-center">Version History</h2>
-                <p class="text-gray-200 text-sm text-center">
-                    Track every edit effortlessly, and never lose a single change.
-                </p>
-                <div class="mt-4 text-gray-300 text-xs">
-                    <p>Finn Hayes - Today, 3:18 PM</p>
-                    <p>Zoe Quinn - Today, 1:50 PM</p>
-                    <p>Ava Neal - Yesterday, 2:55 PM</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
 <section id="section-1" class="relative min-h-[900px] text-white flex items-center justify-center pt-32">
 <div class="relative top-20 text-center md:absolute md:top-[20px] md:text-center">
      <!-- 1) Headline -->
@@ -756,6 +701,58 @@ class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg
 
 </section>
 <section id="section-4" class="relative min-h-[2000px] text-white overflow-hidden pt-32">
+<div id="video-card-container" class="fixed left-8 z-10 w-[300px] h-[300px]" style="top: 50%; transform: translateY(-50%);">
+        <div id="left-video-panel" class="relative bg-black rounded-xl shadow-lg w-full h-full overflow-hidden">
+            <video class="absolute inset-0 w-full h-full object-cover" autoplay loop muted playsinline>
+                <source src="holographicgradient.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+
+            <div id="video-overlay-0" class="video-overlay-content opacity-100 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
+                <h2 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
+                    Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
+                </h2>
+                <p class="text-gray-200 text-sm text-center">
+                    Huly offers a wide range of features to create and manage your collaborative tools and boost team efficiency.
+                </p>
+                <div class="mt-4 flex items-center justify-center space-x-2">
+                    <span class="inline-block bg-blue-400 text-blue-900 text-xs px-2 py-1 rounded-full">John S.</span>
+                    <span class="inline-block bg-purple-400 text-purple-900 text-xs px-2 py-1 rounded-full">Lilianna</span>
+                </div>
+            </div>
+    <div id="video-overlay-1" class="video-overlay-content opacity-0 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
+                <div class="relative w-full h-full flex flex-col justify-center items-center">
+                    <div class="arrow-container">
+                        <svg class="arrow-svg arrow-left" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M15 18l-6-6 6-6"></path>
+                        </svg>
+                        <svg class="arrow-svg arrow-right" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M9 18l6-6-6-6"></path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-semibold mb-4 text-white z-10">Team</h2>
+                    <p class="text-gray-200 text-sm text-center z-10">
+                        Enhance teamwork with powerful real-time collaboration features.
+                    </p>
+                    <div class="mt-4 flex items-center justify-center space-x-2 z-10">
+                        <span class="inline-block bg-blue-400 text-blue-900 text-xs px-2 py-1 rounded-full">John S.</span>
+                        <span class="inline-block bg-purple-400 text-purple-900 text-xs px-2 py-1 rounded-full">Lilianna</span>
+                    </div>
+                </div>
+            </div>
+  <div id="video-overlay-2" class="video-overlay-content opacity-0 absolute inset-0 flex flex-col justify-center items-center p-6 text-white bg-black bg-opacity-50">
+                <h2 class="text-xl font-semibold mb-4 text-white text-center">Version History</h2>
+                <p class="text-gray-200 text-sm text-center">
+                    Track every edit effortlessly, and never lose a single change.
+                </p>
+                <div class="mt-4 text-gray-300 text-xs">
+                    <p>Finn Hayes - Today, 3:18 PM</p>
+                    <p>Zoe Quinn - Today, 1:50 PM</p>
+                    <p>Ava Neal - Yesterday, 2:55 PM</p>
+                </div>
+            </div>
+        </div></div>
+    
 <div id="draggableContainer" class="relative md:absolute md:w-[570px] md:top-[15px] md:left-[360px] md:text-left text-80 text-center w-full md:w-auto relative overflow-visible pt-32">
 <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
   Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
@@ -1046,7 +1043,7 @@ window.addEventListener('resize', () => {
         });
     </script>
     <!------------last section----->
-        <section id="section-4" class="relative min-h-[1900px] bg-[#0D0D0D] text-white overflow-hidden pt-32">
+        <section id="section-5" class="relative min-h-[1900px] bg-[#0D0D0D] text-white overflow-hidden pt-32">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 space-y-32">
             <div class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-8">
                 [ PRODUCTS ]
