--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 </div>
 </div>
 </section>
-<section id="section-5" class="relative min-h-[1900px] bg-[#0D0D0D] text-white overflow-hidden pt-32">
+
+ <section id="section-4" class="relative min-h-[900px] text-white flex items-center justify-center pt-32">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 space-y-32">
             <div class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-8">
                 [ PRODUCTS ]
@@ -1387,7 +1388,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
         });
 
         gsap.set('.infinite-scroller-main-container', { opacity: 1 });
-                                    </script>
+    </script>
+
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
